--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,36 @@
   <script src="src/popup.js"></script>
 </head>
 <body>
-  <h2>ToroFill</h2>
-  <p>Click the button below to trigger autofill on the current page</p>
-  <button id="autofillButton">AutoFill Now</button>
+  <h2>AutoFill Extension</h2>
+  <p>Fill in the form below and click the button to trigger autofill on the current page.</p>
+
+  <!-- Input form -->
+  <form id="autofillForm">
+    <label for="firstName">First Name:</label>
+    <input type="text" id="firstName" name="firstName" required>
+
+    <label for="lastName">Last Name:</label>
+    <input type="text" id="lastName" name="lastName" required>
+
+    <label for="address">Address:</label>
+    <input type="text" id="address" name="address" required>
+
+    <label for="city">City:</label>
+    <input type="text" id="city" name="city" required>
+
+    <label for="country">Country/Region:</label>
+    <input type="text" id="country" name="country" required>
+
+    <label for="state">State:</label>
+    <input type="text" id="state" name="state" required>
+
+    <label for="zipCode">Zip Code:</label>
+    <input type="text" id="zipCode" name="zipCode" required>
+
+    <label for="phoneNumber">Phone Number:</label>
+    <input type="tel" id="phoneNumber" name="phoneNumber" required>
+
+    <button type="button" id="autofillButton">AutoFill Now</button>
+  </form>
 </body>
 </html>
