--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,3 @@
-<!-- popup.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,35 +10,59 @@
 </head>
 <body>
   <h2>AutoFill Extension</h2>
-  <p>Fill in the form below and click the button to trigger autofill on the current page.</p>
 
-  <!-- Input form -->
-  <form id="autofillForm">
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" required>
+  <!-- Section Navigation Links -->
+  <div class="section-links">
+    <span id="personalInfoLink" class="link" onclick="showSection('personalInfo')">Personal Information</span>
+    <span id="creditCardLink" class="link" onclick="showSection('creditCard')">Credit Card Information</span>
+  </div>
 
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" required>
+  <!-- Personal Information Section -->
+  <section id="personalInfoSection" class="content-section">
+    <form id="personalInfoForm">
+      <label for="firstName">First Name:</label>
+      <input type="text" id="firstName" name="firstName">
 
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" required>
+      <label for="lastName">Last Name:</label>
+      <input type="text" id="lastName" name="lastName">
 
-    <label for="city">City:</label>
-    <input type="text" id="city" name="city" required>
+      <label for="address">Address:</label>
+      <input type="text" id="address" name="address">
 
-    <label for="country">Country/Region:</label>
-    <input type="text" id="country" name="country" required>
+      <label for="city">City:</label>
+      <input type="text" id="city" name="city">
 
-    <label for="state">State:</label>
-    <input type="text" id="state" name="state" required>
+      <label for="country">Country/Region:</label>
+      <input type="text" id="country" name="country">
 
-    <label for="zipCode">Zip Code:</label>
-    <input type="text" id="zipCode" name="zipCode" required>
+      <label for="state">State:</label>
+      <input type="text" id="state" name="state">
 
-    <label for="phoneNumber">Phone Number:</label>
-    <input type="tel" id="phoneNumber" name="phoneNumber" required>
+      <label for="zipCode">Zip Code:</label>
+      <input type="text" id="zipCode" name="zipCode">
 
-    <button type="button" id="autofillButton">AutoFill Now</button>
-  </form>
+      <label for="phoneNumber">Phone Number:</label>
+      <input type="text" id="phoneNumber" name="phoneNumber">
+    </form>
+  </section>
+
+  <!-- Credit Card Information Section -->
+  <section id="creditCardSection" class="content-section" style="display: none;">
+    <form id="creditCardForm">
+      <label for="creditCardNumber">Credit Card Number:</label>
+      <input type="text" id="creditCardNumber" name="creditCardNumber">
+
+      <label for="expirationDate">Expiration Date:</label>
+      <input type="text" id="expirationDate" name="expirationDate">
+
+      <label for="cvv">CVV:</label>
+      <input type="text" id="cvv" name="cvv">
+    </form>
+  </section>
+
+  <!-- AutoFill Button -->
+  <button type="button" id="autofillButton">AutoFill Now</button>
+
+  <script src="src/popup.js"></script>
 </body>
 </html>
